--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Name="frmMain" x:Class="Goron_Melisa_Lab2.MainWindow"
+﻿<Window x:Class="Goron_Melisa_Lab2.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Goron_Melisa_Lab2"
         mc:Ignorable="d"
-        Title="Virtual Doughnuts Factory" Height="450" Width="800" ResizeMode="NoResize" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}">
+        Title="Virtual Doughnuts Factory" Height="450" Width="800" ResizeMode="NoResize" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}" Loaded="frmMain_Loaded">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -31,7 +31,7 @@
         <TextBox x:Name="txtVanillaFilled" HorizontalAlignment="Left" Height="34" Margin="490,163,0,0" Text="0" TextWrapping="Wrap" VerticalAlignment="Top" Width="60" IsReadOnly="True" Grid.Column="1"/>
         <GroupBox x:Name="___No_Name_" Header="Current Sale" HorizontalAlignment="Left" Height="187" Margin="22,218,0,0" VerticalAlignment="Top" Width="756" FontWeight="Bold" Grid.ColumnSpan="2"/>
         <Label x:Name="lblQuantity" Content="Quantity" HorizontalAlignment="Left" Height="24" Margin="55,252,0,0" VerticalAlignment="Top" Width="62" Grid.ColumnSpan="2"/>
-        <TextBox x:Name="txtQuantity" HorizontalAlignment="Left" Height="24" Margin="38,255,0,0" Text="0" TextWrapping="Wrap" VerticalAlignment="Top" Width="54" Grid.Column="1"/>
+        <TextBox x:Name="txtQuantity" HorizontalAlignment="Left" Height="24" Margin="38,255,0,0" Text="0" TextWrapping="Wrap" VerticalAlignment="Top" Width="54" Grid.Column="1" KeyUp="txtQuantity_KeyUp"/>
         <Label x:Name="lblType" Content="Type" HorizontalAlignment="Left" Height="30" Margin="138,255,0,0" VerticalAlignment="Top" Width="48" Grid.Column="1"/>
         <ComboBox x:Name="cmbType" HorizontalAlignment="Left" Height="34" Margin="186,246,0,0" VerticalAlignment="Top" Width="175" Grid.Column="1"/>
         <Label x:Name="lblPrice" Content="Price" HorizontalAlignment="Left" Height="36" Margin="395,252,0,0" VerticalAlignment="Top" Width="64" Grid.Column="1"/>
@@ -43,20 +43,23 @@
         <Button x:Name="btnRemoveItem" Content="Remove Item" HorizontalAlignment="Left" Height="20" Margin="582,320,0,0" VerticalAlignment="Top" Width="88" Grid.Column="1"/>
         <Button x:Name="btnCheckOut" Content="Check Out" HorizontalAlignment="Left" Height="36" Margin="582,355,0,0" VerticalAlignment="Top" Width="88" FontWeight="Bold" Grid.Column="1"/>
         <Menu x:Name="mnuMain" HorizontalAlignment="Left" Height="21" VerticalAlignment="Top"
-Width="130" Grid.ColumnSpan="2">
+Width="131" Margin="0,26,0,0">
             <MenuItem Header="File">
-                <MenuItem Header="Exit"/>
+                <MenuItem Header="Exit" Click="exitToolStripMenuItem_Click"/>
             </MenuItem>
-            <MenuItem Header="Doughnuts">
+            <MenuItem Header="_Doughnuts">
                 <MenuItem Header="Make">
                     <MenuItem Header="Raised">
-                        <MenuItem x:Name="glazedMenuItem" Header="Glazed"/>
-                        <MenuItem x:Name="sugarMenuItem" Header="Sugar"/>
+                        <MenuItem x:Name="glazedToolStripMenuItem" Header="Glazed"
+Click="glazedToolStripMenuItem_Click" IsCheckable="True"/>
+                        <MenuItem x:Name="sugarToolStripMenuItem" Header="Sugar" Click="sugarToolStripMenuItem_Click" IsCheckable="True"/>
                     </MenuItem>
                     <MenuItem Header="Filled"/>
                 </MenuItem>
-                <MenuItem Header="Stop"/>
+                <MenuItem x:Name="mnuStop" Header="Stop"
+Click="stopToolStripMenuItem_Click"/>
             </MenuItem>
+            
         </Menu>
         <Label x:Name="lblGlazedRaised" Content="Glazed" HorizontalAlignment="Left" Height="29" Margin="30,92,0,0" VerticalAlignment="Top" Width="53" Grid.Column="1"/>
 
